lambda-notes-client/src/index.css
/*------------------------------------*\
RESET
\*------------------------------------*/

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*------------------------------------*\
General Styles
\*------------------------------------*/

* {
  box-sizing: border-box;
}

html, body, #root {
  width: 100%;
  height: 100%;
  font-family: sans-serif;
  font-size: 62.5%;
}

h1, h2, h3, h4, h5 {
  margin: 0;
}

.article-note__linked {
	height: 265px;
  width: 265px;
  border: 1.5px solid #CBCBCB;
	margin: 20px 0 14px;
	text-decoration: none;
	color: black;
	background-color: white;
	padding: 13px 25px;
}
.article-note__linked:hover {
	box-shadow: .5px .5px 10px .5px rgba(0, 0, 0, .1)
}
.article-note__linked .underline {
	width: 98%;
	text-align: left;
	margin: 7px 0 10px;
}
.article-note__linked h3 {
	font-size: 2.5rem;
	font-weight: bold;
}
.article-note__linked p {
	font-size: 1.7rem;
	line-height: 29px;
	letter-spacing: 1.3px;
}

